# chemical_utilities_os

./: README.md  pyproject.toml
.github/workflows/: static.yaml  testing.yaml
docs/docs/chemutil/: classical_ml_model_build.md  classical_ml_models.md  datasets.md  featurization.md  filtering.md  helpers.md  inchimod.md  index.md  molecules.md  multiopt.md  rdkit_descriptor_types.md  scaffold_analysis.md  smilesmod.md  vis.md
docs/site/chemutil/: classical_ml_model_build.html  classical_ml_models.html  datasets.html  featurization.html  filtering.html  helpers.html  inchimod.html  index.html  molecules.html  multiopt.html  rdkit_descriptor_types.html  scaffold_analysis.html  smilesmod.html  vis.html
src/chemutil/: __init__.py  classical_ml_model_build.py  classical_ml_models.py  datasets.py  featurization.py  filtering.py  helpers.py  inchimod.py  molecules.py  multiopt.py  rdkit_descriptor_types.py  scaffold_analysis.py  smilesmod.py  vis.py
test/: test_classical_ml_models.py  test_datasets.py  test_featurization.py  test_filter.py  test_helpers.py  test_inchimod.py  test_molecules.py  test_multiopt.py  test_scaffold_analysis.py  test_smilesmod.py  test_vis.py
